--- a/lesson3/8.简易网页时钟/简易网页时钟.html
+++ b/lesson3/8.简易网页时钟/简易网页时钟.html
@@ -12,21 +12,15 @@ span{color:#000;width:80px;line-height:2;background:#fbfbfb;border:2px solid #b4
 <script>
 window.onload = function ()
 {
-	var oClock = document.getElementById("clock");	
-	var aSpan = oClock.getElementsByTagName("span");
-		
-	setInterval(getTimes, 1000);
-	getTimes();
-	function getTimes ()
-	{
-		var oDate = new Date();
-		var aDate = [oDate.getHours(), oDate.getMinutes(), oDate.getSeconds()];
-		for (var i in aDate) aSpan[i].innerHTML = format(aDate[i])
+	function getNowDate(){
+		var nowDate = new Date();
+		var oSpan = document.getElementsByTagName("span");
+		oSpan[0].innerHTML=nowDate.getHours();
+		oSpan[1].innerHTML=nowDate.getMinutes();
+		oSpan[2].innerHTML=nowDate.getSeconds();
 	}
-	function format(a)
-	{
-		return a.toString().replace(/^(\d)$/, "0$1")	
-	}
+	getNowDate();
+	setInterval(getNowDate,1000)
 }
 </script>
 </head>
