--- a/lesson3/8.简易网页时钟/简易网页时钟.html
+++ b/lesson3/8.简易网页时钟/简易网页时钟.html
@@ -15,12 +15,13 @@ window.onload = function ()
 	function getNowDate(){
 		var nowDate = new Date();
 		var oSpan = document.getElementsByTagName("span");
-		oSpan[0].innerHTML=nowDate.getHours();
-		oSpan[1].innerHTML=nowDate.getMinutes();
-		oSpan[2].innerHTML=nowDate.getSeconds();
+		var aDate = [nowDate.getHours(),nowDate.getMinutes(),nowDate.getSeconds()];
+		for(var i in aDate)oSpan[i].innerHTML=format(aDate[i]);
 	}
-	getNowDate();
-	setInterval(getNowDate,1000)
+	function format(a){
+		return a.toString().replace(/^(\d)$/, "0$1");
+	}getNowDate();
+	setInterval(getNowDate,1000);
 }
 </script>
 </head>
