--- a/lesson3/9.倒计时时钟/倒计时时钟.html
+++ b/lesson3/9.倒计时时钟/倒计时时钟.html
@@ -18,30 +18,23 @@ window.onload = function ()
 	var aInput = oCountDown.getElementsByTagName("input")[0];
 	var timer = null;
 	
-	aInput.onclick = function ()
-	{
-		this.className == "" ? (timer = setInterval(updateTime, 1000), updateTime()) : (clearInterval(timer));
-		this.className = this.className == '' ? "cancel" : '';	
-	};
-	
-	function format(a)
-	{
-		return a.toString().replace(/^(\d)$/,'0$1')
+	aInput.onclick =function (){
+		this.className==''?(timer=setInterval(updateTime,1000)):(clearInterval(timer));
+		this.className=this.className==''?"cancel":'';
 	}
-	
-	function updateTime ()
-	{
-		var aSpan = oCountDown.getElementsByTagName("span");
-		var oRemain = aSpan[0].innerHTML.replace(/^0/,'') * 60 + parseInt(aSpan[1].innerHTML.replace(/^0/,''));
-		if(oRemain <= 0)
-		{
+	function format(a){
+		return a.toString().replace(/^(\d)$/,"0$1");
+	}
+	function updateTime(){
+		var oSpan=oCountDown.getElementsByTagName('span');
+		var allSecond= oSpan[0].innerHTML.replace(/^0/,"")*60+parseInt(oSpan[1].innerHTML.replace(/^0/,""));
+		if(allSecond<=0){
 			clearInterval(timer);
-			return
+			return;
 		}
-		oRemain--;
-		aSpan[0].innerHTML = format(parseInt(oRemain / 60));
-		oRemain %= 60;
-		aSpan[1].innerHTML = format(parseInt(oRemain));
+		allSecond--;
+		oSpan[0].innerHTML=format(parseInt(allSecond/60));
+		oSpan[1].innerHTML=format(allSecond%60);
 	}
 }
 </script>
