--- a/lesson4/1.setTimeout应用/setTimeout应用.html
+++ b/lesson4/1.setTimeout应用/setTimeout应用.html
@@ -21,7 +21,56 @@ ul{list-style-type:none;}
 #nav .subnav .arrow{position:absolute;top:-4px;display:block;width:11px;height:5px;background-position:0 -261px;}
 </style>
 <script type="text/javascript">
+var get = {
+    byId:function (id){
+        return document.getElementById(id);
+    },
+    byClass:function (sClass,oParent){
+        var aClass=[];
+        var reClass = new RegExp("(^| )"+sClass+"( |$)");
+        var aElem = this.byTagName("*",oParent);
+        for(var i=0;i<aElem.length;i++)reClass.test(aElem[i].className)&&aClass.push(aElem[i]);
+        return aClass;
+    },
+    byTagName:function (elem,obj){
+        return (obj || document).getElementsByTagName(elem);
+    }
+}
 
+window.onload=function (){
+    var oNav = get.byId("nav");
+    var aLi = get.byTagName("li",oNav);
+    var aSubNav = get.byClass("subnav",oNav);
+    var oSubNav=timer=null;
+
+    for(var i=1;i<aLi.length;i++){
+        aLi[i].onmouseover=function(){
+            for(var j=0;j<aSubNav.length;j++)aSubNav[j].style.display="none";
+
+            oSubNav = get.byClass("subnav",this)[0];
+            oEm = get.byTagName("em",this)[0];
+            oSubNav.style.display="block";
+            
+            oNav.offsetWidth-this.offsetLeft>oSubNav.offsetWidth ? 
+            oSubNav.style.left = this.offsetLeft+"px" :
+            oSubNav.style.right = 0;
+            document.title=this.offsetLeft+","+oSubNav.offsetLeft;
+            oEm.style.left=this.offsetLeft-oSubNav.offsetLeft+50+"px";
+
+            clearTimeout(timer);
+
+            oSubNav.onmouseover=function(event){
+                (event||window.event).cancelBubble=true;                
+                clearTimeout(timer);
+            }
+        }
+        aLi[i].onmouseout = function (){
+            timer = setTimeout(function(){
+                oSubNav.style.display="none";
+            },300)
+        }
+    }
+}
 </script>
 </head>
 <body>
