--- a/lesson4/2.自动播放一幻灯片效果/自动播放——幻灯片效果.html
+++ b/lesson4/2.自动播放一幻灯片效果/自动播放——幻灯片效果.html
@@ -19,59 +19,60 @@ body{background:#000;text-align:center;font:12px/20px Arial;}
 <script type="text/javascript">
 window.onload = function ()
 {
-	var oBox = document.getElementById("box");
-	var aUl = document.getElementsByTagName("ul");
-	var aImg = aUl[0].getElementsByTagName("li");
-	var aNum = aUl[1].getElementsByTagName("li");
-	var timer = play = null;
-	var i = index = 0;	
-	
-	//切换按钮
-	for(i=0;i<aNum.length;i++){
-        aNum[i].index =i;
+	var oBox = document.getElementById('box');
+    var aUl = document.getElementsByTagName('ul');
+    var aImg = aUl[0].getElementsByTagName('li');
+    var aNum = aUl[1].getElementsByTagName('li');
+    var i = index = 0;
+    var timer = play = null;
+
+    //切换按钮
+    for(var i=0;i<aNum.length;i++){
+        aNum[i].index=i;
         aNum[i].onmouseover=function(){
-            show(this.index);
+            show(this.index)
         }
-    } 
-	//鼠标划过关闭定时器
-	oBox.onmouseover=function (){
-        clearTimeout(play);
     }
-	
-	//鼠标离开启动自动播放
-	oBox.onmouseout=function (){
-        autoplay()
-    }	
-	autoplay();
-	//自动播放函数
-	function autoplay(){
-        play = setInterval(function (){
+
+    //鼠标滑过关闭定时器
+    oBox.onmouseover=function(){
+        clearInterval(play);
+    }
+
+    //鼠标离开自动播放
+    oBox.onmouseout=function(){
+        autoplay();
+    }
+
+    function autoplay(){
+        play = setInterval(function(){
             index++;
-            index >= aImg.length&&(index=0);
-            show(index);     
+            index >=aImg.length && (index = 0);
+            show(index)
         },2000)
     }
-	
-	//图片切换, 淡入淡出效果
-    function show(a){
-        var alpha =0;
-        index=a;
-        for(i=0;i<aNum.length;i++)aNum[i].className="";
-        aNum[index].className="current";
+    autoplay()
+
+    //图片淡入淡出
+    function show(index){
+        var alpha=0;
+        for(i=0;i<aNum.length;i++) aNum[i].className="";
+        aNum[index].className+='current';
         clearInterval(timer);
+
         for(i=0;i<aImg.length;i++){
             aImg[i].style.opacity=0;
-            aImg[i].style.filter="alpha(opacity=0)";
+            aImg[i].style.filter='alpha(opacity=0)'
         }
-        timer=setInterval(function(){
+
+        timer = setInterval(function(){
             alpha+=2;
-            alpha>100&&(alpha=100);
+            alpha>100 && (alpha=100);
             aImg[index].style.opacity=alpha/100;
-            aImg[index].style.filter="alpha(opacity="+alpha+")";
-            alpha==100&&clearInterval(timer);
-        },20);
+            aImg[index].style.filter='alpha(opacity='+alpha+')';
+            alpha==100 && clearInterval(timer)
+        },15)
     }
-	
 };
 </script>
 </head>
